[package]
name = "scx_truther"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A non-competitive demo scheduler for sched-ext (rustland-core)"

[dependencies]
scx_rustland_core = { git = "https://github.com/sched-ext/scx.git", branch = "main" }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
scx_cargo = { git = "https://github.com/sched-ext/scx.git", branch = "main" }

[lib]
name = "scx_truther"
path = "src/lib.rs"

[[bin]]
name = "scx_truther"
path = "src/main.rs"

[profile.release]
lto = "thin"

[profile.release-tiny]
inherits = "release"
lto = "thin"
strip = true
incremental = true
codegen-units = 1

[profile.release-fast]
inherits = "release"
lto = false
incremental = true
